--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
+    "ember-lodash": "^4.18.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-plotly-shim": "0.0.2",
     "ember-resolver": "^4.5.0",
