--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
   },
   "dependencies": {
     "ember-cli-babel": "^6.12.0",
-    "ember-cli-htmlbars": "^2.0.3"
+    "ember-cli-htmlbars": "^2.0.3",
+    "ember-debug-logger": "^1.1.0",
+    "ember-lodash": "^4.18.0",
+    "ember-plotly-shim": "git+ssh://git@github.com:jacobq/ember-plotly-shim.git#debug"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.6.0",
@@ -46,14 +49,11 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-testdouble": "^0.1.3",
     "ember-cli-uglify": "^2.0.2",
-    "ember-debug-logger": "^1.1.0",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
-    "ember-lodash": "^4.18.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-md5": "^1.1.0",
-    "ember-plotly-shim": "0.0.2",
     "ember-resolver": "^4.5.2",
     "ember-source": "~3.1.0-beta.1",
     "ember-source-channel-url": "^1.0.1",
