--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-testdouble": "^0.1.3",
     "ember-cli-uglify": "^2.0.2",
+    "ember-component-css": "^0.6.3",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
