--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "ember-debug-logger": "^1.1.0",
     "ember-decorators": "^2.0.0",
     "ember-lodash": "^4.18.0",
-    "ember-plotly-shim": "brianhjelle/ember-plotly-shim#e0f971f405b51e0aaeadfdfdc29d51121b9e307a"
+    "ember-plotly-shim": "0.0.4"
   },
   "devDependencies": {
     "@ember-decorators/babel-transforms": "^2.0.0",
