--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     "plotly",
     "plotly.js"
   ],
+  "repository": "https://github.com/EmberMN/ember-cli-plotly",
   "license": "MIT",
   "author": "Jacob Quant <jacobq@gmail.com>",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
-  "repository": "https://github.com/EmberMN/ember-cli-plotly",
   "scripts": {
     "build": "ember build",
-    "lint:js": "eslint ./*.js addon addon-test-support app blueprints config lib server test-support tests",
+    "lint:js": "eslint .",
     "start": "ember serve",
     "test": "ember test",
     "test:all": "ember try:each"
@@ -41,9 +41,9 @@
   "devDependencies": {
     "@ember-decorators/babel-transforms": "^2.0.0",
     "babel-eslint": "^8.2.3",
-    "broccoli-asset-rev": "^2.6.0",
+    "broccoli-asset-rev": "^2.7.0",
     "ember-ajax": "^3.0.0",
-    "ember-cli": "~3.1.4",
+    "ember-cli": "~3.3.0",
     "ember-cli-dependency-checker": "^2.1.0",
     "ember-cli-eslint": "^4.2.3",
     "ember-cli-htmlbars-inline-precompile": "^1.0.2",
@@ -56,22 +56,23 @@
     "ember-component-css": "^0.6.3",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.0",
-    "ember-load-initializers": "^1.0.0",
+    "ember-load-initializers": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-md5": "^1.1.0",
     "ember-resolver": "^4.5.2",
-    "ember-source": "~3.2.2",
+    "ember-source": "~3.3.0",
     "ember-source-channel-url": "^1.0.1",
     "ember-truth-helpers": "^2.0.0",
     "ember-try": "^0.2.23",
     "eslint-plugin-ember": "^5.0.3",
     "eslint-plugin-node": "^6.0.1",
     "loader.js": "^4.6.0",
+    "qunit-dom": "^0.6.2",
     "safe-json-stringify": "^1.2.0",
     "testdouble": "^3.5.2"
   },
   "engines": {
-    "node": "6.* || >= 7.*"
+    "node": "6.* || 8.* || >= 10.*"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
