--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "scripts": {
     "build": "ember build",
+    "lint:hbs": "ember-template-lint .",
     "lint:js": "eslint .",
     "start": "ember serve",
     "test": "ember test",
@@ -40,17 +41,17 @@
   },
   "devDependencies": {
     "@ember-decorators/babel-transforms": "^2.0.2",
+    "@ember/optional-features": "^0.6.3",
     "babel-eslint": "^8.2.6",
     "broccoli-asset-rev": "^3.0.0",
     "ember-ajax": "^3.1.0",
-    "ember-cli": "~3.3.0",
+    "ember-cli": "~3.5.1",
     "ember-cli-dependency-checker": "^3.0.0",
     "ember-cli-eslint": "^4.2.3",
     "ember-cli-htmlbars-inline-precompile": "^1.0.3",
     "ember-cli-inject-live-reload": "^1.8.2",
-    "ember-cli-qunit": "^4.3.2",
-    "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.1",
+    "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-testdouble": "^0.1.3",
     "ember-cli-uglify": "^2.1.0",
     "ember-component-css": "^0.6.4",
@@ -59,15 +60,16 @@
     "ember-load-initializers": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-md5": "^1.2.0",
+    "ember-qunit": "^3.4.1",
     "ember-resolver": "^5.0.1",
-    "ember-source": "~3.3.1",
+    "ember-source": "~3.5.1",
     "ember-source-channel-url": "^1.1.0",
     "ember-truth-helpers": "^2.0.0",
-    "ember-try": "^0.2.23",
+    "ember-try": "^1.0.0",
     "eslint-plugin-ember": "^5.2.0",
     "eslint-plugin-node": "^7.0.1",
     "loader.js": "^4.7.0",
-    "qunit-dom": "^0.7.1",
+    "qunit-dom": "^0.8.0",
     "safe-json-stringify": "^1.2.0",
     "testdouble": "^3.8.1"
   },
