--- a/.travis.yml
+++ b/.travis.yml
@@ -42,4 +42,5 @@ jobs:
     - env: EMBER_TRY_SCENARIO=ember-default-with-jquery
 
 script:
-  - node_modules/.bin/ember try:one $EMBER_TRY_SCENARIO
+  - echo $EMBER_TRY_SCENARIO
+  - if [ -z ${EMBER_TRY_SCENARIO} ]; then ember test; else node_modules/.bin/ember try:one $EMBER_TRY_SCENARIO; fi
