--- a/package.json
+++ b/package.json
@@ -31,12 +31,11 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
-    "@ember-decorators/babel-transforms": "5.2.0",
     "ember-auto-import": "1.2.21",
     "ember-cli-babel": "7.7.3",
     "ember-cli-htmlbars": "3.0.1",
     "ember-debug-logger": "2.1.1",
-    "ember-decorators": "5.2.0",
+    "ember-decorators": "6.0.0",
     "ember-lodash": "4.19.4",
     "plotly.js": "1.47.2"
   },
@@ -55,6 +54,7 @@
     "ember-cli-testdouble": "0.1.4",
     "ember-cli-uglify": "3.0.0",
     "ember-component-css": "0.6.7",
+    "ember-decorators-polyfill": "^1.0.3",
     "ember-disable-prototype-extensions": "1.1.3",
     "ember-export-application-global": "2.0.0",
     "ember-load-initializers": "2.0.0",
