--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@ember/optional-features": "0.7.0",
     "babel-eslint": "10.0.1",
     "broccoli-asset-rev": "3.0.0",
-    "ember-cli": "3.10.0",
+    "ember-cli": "3.10.1",
     "ember-cli-dependency-checker": "3.1.0",
     "ember-cli-deprecation-workflow": "1.0.1",
     "ember-cli-eslint": "5.1.0",
@@ -74,7 +74,7 @@
     "testdouble": "3.11.0"
   },
   "engines": {
-    "node": "6.* || 8.* || >= 10.*"
+    "node": "8.* || >= 10.*"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
