--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 ---
 language: node_js
 node_js:
+  - "8"
   - "10"
   - "12"
 
@@ -19,6 +20,7 @@ env:
   global:
     # See https://git.io/vdao3 for details.
     - JOBS=1
+    - NODE_OPTIONS=--max_old_space_size=2048
 
 branches:
   only:
@@ -43,6 +45,7 @@ jobs:
       env: EMBER_TRY_SCENARIO=ember-lts-2.16
     - env: EMBER_TRY_SCENARIO=ember-lts-2.18
     - env: EMBER_TRY_SCENARIO=ember-lts-3.4
+    - env: EMBER_TRY_SCENARIO=ember-lts-3.8
     - env: EMBER_TRY_SCENARIO=ember-release
     - env: EMBER_TRY_SCENARIO=ember-beta
     - env: EMBER_TRY_SCENARIO=ember-canary
