--- a/package.json
+++ b/package.json
@@ -32,22 +32,21 @@
   },
   "dependencies": {
     "debug": "4.1.1",
-    "ember-auto-import": "1.3.0",
-    "ember-cli-babel": "7.8.0",
-    "ember-cli-htmlbars": "3.0.1",
+    "ember-auto-import": "1.5.2",
+    "ember-cli-babel": "7.12.0",
+    "ember-cli-htmlbars": "4.0.3",
     "ember-decorators": "6.1.1",
     "ember-lodash": "4.19.5",
     "plotly.js": "1.49.5"
   },
   "devDependencies": {
-    "@ember/optional-features": "0.7.0",
+    "@ember/optional-features": "1.0.0",
     "babel-eslint": "10.0.3",
     "broccoli-asset-rev": "3.0.0",
-    "ember-cli": "3.10.1",
+    "ember-cli": "3.13.1",
     "ember-cli-dependency-checker": "3.2.0",
     "ember-cli-deprecation-workflow": "1.0.1",
     "ember-cli-eslint": "5.1.0",
-    "ember-cli-htmlbars-inline-precompile": "2.1.0",
     "ember-cli-inject-live-reload": "2.0.1",
     "ember-cli-sri": "2.1.1",
     "ember-cli-template-lint": "1.0.0-beta.3",
@@ -57,12 +56,12 @@
     "ember-decorators-polyfill": "1.0.6",
     "ember-disable-prototype-extensions": "1.1.3",
     "ember-export-application-global": "2.0.0",
-    "ember-load-initializers": "2.0.0",
+    "ember-load-initializers": "2.1.0",
     "ember-maybe-import-regenerator": "0.1.6",
     "ember-md5": "1.2.0",
     "ember-qunit": "4.5.1",
-    "ember-resolver": "5.1.3",
-    "ember-source": "3.10.2",
+    "ember-resolver": "5.3.0",
+    "ember-source": "3.13.2",
     "ember-source-channel-url": "2.0.1",
     "ember-truth-helpers": "2.1.0",
     "ember-try": "1.2.1",
@@ -74,7 +73,7 @@
     "testdouble": "3.12.4"
   },
   "engines": {
-    "node": "8.* || >= 10.*"
+    "node": "8.* || 10.* || >= 12.*"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
